--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -5,6 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Amazing Grace - Quienes somos">
+    <meta name="ROBOTS" content="INDEX, FOLLOW">
+    <meta name="ROBOTS" content="ALL">
+    <meta name="GOOGLEBOT" content="index, follow, all">
+    <meta name="Resource-type" content="Document">
+    <meta name="revisit-after" content="15 Days">
+    <meta name="languaje" content="Spanish">
+    <meta http-equiv="Content-Languaje" content="ES">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-Control" content="no-cache, no-strore, must-revalidate">
+    <meta name="distribution" content="National">
+    <meta name="city" content="Temuco">
+    <meta name="country" content="Chile">
+    <meta name="resource-type" content="Document">
+    <meta name="doc-type" content="Web Page">
+    <meta name="keywords" content="productos, pasteles, pastelería, cupcakes, tortas, chocolate, crema, fondant, bizcocho, rico, dulce, sabor, tradicional, calidad, elección, recetas, personalizable, personalizado">
+    <meta name="keywords" content="Alta calidad">
+    <meta name="keywords" content="Pastelería tradicional">
+    <meta name="keywords" content="Tortas de fondant de calidad">
     <meta name="description" content="Si te gusta disfrutar del mejor sabor de productos elaborados con productos de alta calidad, entonces tienes que conocernos. Bienvenido a Amazin Grace">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,111 +66,48 @@
             </ul>
             <p>Redes sociales</p>
         </aside>
-        <div class="divInferior"></div>
+        <div class="divInferior">
+        </div>
     </header>
     <main class="row">
-        <section class="container">
-            <article class="panel-group row" id="accordion">
-                <div class="panel panel-default col-xl-12">
-                    <div class="panel-heading">
-                        <h2 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#leyenda1"><i class="far fa-question-circle article__h2--icono"></i> Quienes somos</a>
-                        </h2>
-                    </div>
-                    <div id="leyenda1" class="panel-collapse collapse in">
-                        <div class="panel-body">
-                            <p>Somos una pastelería online que producimos Pasteles y Cupcakes personalizados y tradicionales.</p>
-                            <p>Ideal si quiere sorprender con algo rico, único y diferente.</p>
-                            <p>Puedes elegir los sabores y diseños que desees</p>
-                        </div>
+        <section class="panel-group col-sm-6 col-md-6 col-lg-8 col-xl-9" id="accordion">
+            <article class="panel panel-default">
+                <div class="panel-heading">
+                    <h2 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#leyenda1"><i class="far fa-question-circle article__h2--icono"></i> Quienes somos</a>
+                    </h2>
+                </div>
+                <div id="leyenda1" class="panel-collapse collapse show">
+                    <div class="panel-body">
+                        <p>Somos una pastelería online que producimos Pasteles y Cupcakes personalizados y tradicionales.</p>
+                        <p>Ideal si quiere sorprender con algo rico, único y diferente.</p>
+                        <p>Puedes elegir los sabores y diseños que desees</p>
                     </div>
                 </div>
-                <div class="panel panel-default col-xl-12">
-                    <div class="panel-heading">
-                        <h2 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#leyenda2"><i class="fas fa-concierge-bell article__h2--icono"></i>Servicios</a>
-                        </h2>
-                    </div>
-                    <div id="leyenda2" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <h3>Entrega a domicilio</h3>
-                            <p>Entregamos nuestros productos a domicilio con un cargo por envío según comuna dentro de Santiago.</p>
-                            <h3>Macarons</h3>
-                            <p>Estos dulces franceses llegaron para quedarse, son delicados, deliciosos y van bien en cualquier ocasión, ya sea una gran celebración o simplemente un antojo. Consulta por los sabores disponibles!</p>
-                            <h3>Cupcakes</h3>
-                            <p>Personalizados o con decoración standar nuestros cupcakes son deliciosos, puedes personalizar desde el bizcochuelo hasta la decoración, ármalos como quieras o pide uno de nuestros sabores sugeridos</p>
-                            <h3>Tortas</h3>
-                            <p>No solo se trata de cómo luce, si no que de sabor. Trabajamos constantemente para que el sabor de nuestros pasteles sea delicioso. Vendemos tortas tradicionales y personalizadas al gusto del cliente </p>
-                        </div>
-                    </div>
+            </article>
+            <article class="panel panel-default">
+                <div class="panel-heading">
+                    <h2 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#leyenda2"><i class="fas fa-concierge-bell article__h2--icono"></i>Servicios</a>
+                    </h2>
                 </div>
-                <div class="panel panel-default col-xl-12">
-                    <div class="panel-heading">
-                        <h2 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#leyenda3"><i class="fas fa-birthday-cake article__h2--icono"></i>Alguno de nuestros productos principales</a>
-                        </h2>
-                    </div>
-                    <div id="leyenda3" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <fieldset>
-                                <legend>Trilogia</legend>
-                                <p>Les preparamos esta deliciosa propuesta para disfrutar en navidad y Año Nuevo , trilogía de 3 mini tortas, 3 sabores diferentes, 9 a 12 porciones en total 🍰 :</p>
-                                <strong>Sabores:</strong>
-                                <ul>
-                                    <li>Clásica red velvet y queso crema (Premium)</li>
-                                    <li>Chocolate belga y frambuesa</li>
-                                    <li>Limón amapola arándanos (Premium)</li>
-                                </ul>
-                                <table class="table table-striped table-bordered table-sm">
-                                    <tr class="thead-dark">
-                                        <th>Número</th>
-                                        <th>Opción</th>
-                                        <th>Valor</th>
-                                        <th>Despacho</th>
-                                    </tr>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Trilogía de tortas</td>
-                                        <td>$25.000</td>
-                                        <td>Despacho gratis a temuco con algunas excepciones</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td>Trilogía de tortas + 8 galletas artesanales surtidas</td>
-                                        <td>$29.000</td>
-                                        <td>Despacho gratis a temuco con algunas excepciones</td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td>Caja surtida de galletas (6 cms. aprox. c/u)<br> Sabores:
-                                            <ul>
-                                                <li>Vainilla Chips rellenas de chocolate 56% cacao</li>
-                                                <li>Res velvet con chips de chocolate blanco, rellenas de queso crema</li>
-                                                <li>Delicias de frambuesa</li>
-                                                <li>Craqueladas de chocolate</li>
-                                            </ul>
-                                        </td>
-                                        <td>
-                                            <ul>
-                                                <li>8 unidades: $5.000</li>
-                                                <li>12 unidades: $7.000</li>
-                                                <li>24 unidades: $12.000</li>
-                                            </ul>
-                                        </td>
-                                        <td>Despacho gratis a temuco con algunas excepciones</td>
-                                    </tr>
-                                </table>
-
-                                <p>Disponibles con despacho día 23, 24/12 (navidad) y 30, 31/12 (Año Nuevo)</p>
-                                <p>Catálogo completo de sabores y precios pueden solicitarlo directo a nuestro WhatsApp 👉🏻 +569 9453 5974</p>
-                                <p>Todas las cajitas incluyen cinta y tag.</p>
-                                <p>Les deseamos una hermosa, cariñosa y feliz navidad ☺️💖</p>
-                            </fieldset>
-                        </div>
+                <div id="leyenda2" class="panel-collapse collapse show">
+                    <div class="panel-body">
+                        <h3>Entrega a domicilio</h3>
+                        <p>Entregamos nuestros productos a domicilio con un cargo por envío según comuna dentro de Santiago.</p>
+                        <h3>Macarons</h3>
+                        <p>Estos dulces franceses llegaron para quedarse, son delicados, deliciosos y van bien en cualquier ocasión, ya sea una gran celebración o simplemente un antojo. Consulta por los sabores disponibles!</p>
+                        <h3>Cupcakes</h3>
+                        <p>Personalizados o con decoración standar nuestros cupcakes son deliciosos, puedes personalizar desde el bizcochuelo hasta la decoración, ármalos como quieras o pide uno de nuestros sabores sugeridos</p>
+                        <h3>Tortas</h3>
+                        <p>No solo se trata de cómo luce, si no que de sabor. Trabajamos constantemente para que el sabor de nuestros pasteles sea delicioso. Vendemos tortas tradicionales y personalizadas al gusto del cliente </p>
                     </div>
                 </div>
             </article>
         </section>
+        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Famazingpasteleria&tabs=timeline&width=340&height=530&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="530"
+            class="p-3 col-sm-6 col-md-6 col-lg-4 col-xl-3" style="border:none;background: rgba(255,255,255,0.6);overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+    </iframe>
     </main>
     <a href="https://api.whatsapp.com/send?phone=56994535974&app=facebook&entry_point=page_cta"><img class="whatsappIcon" src="../img/whatsapp.png" alt=""></a>
     <footer class="row body__footer--setFormato">
