--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -5,6 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Amazing Grace - Recetas">
+    <meta name="ROBOTS" content="INDEX, FOLLOW">
+    <meta name="ROBOTS" content="ALL">
+    <meta name="GOOGLEBOT" content="index, follow, all">
+    <meta name="Resource-type" content="Document">
+    <meta name="revisit-after" content="15 Days">
+    <meta name="languaje" content="Spanish">
+    <meta http-equiv="Content-Languaje" content="ES">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-Control" content="no-cache, no-strore, must-revalidate">
+    <meta name="distribution" content="National">
+    <meta name="city" content="Temuco">
+    <meta name="country" content="Chile">
+    <meta name="resource-type" content="Document">
+    <meta name="doc-type" content="Web Page">
+    <meta name="keywords" content="productos, pasteles, pastelería, cupcakes, tortas, chocolate, crema, fondant, bizcocho, rico, dulce, sabor, tradicional, calidad, elección, recetas, personalizable, personalizado">
+    <meta name="keywords" content="Alta calidad">
+    <meta name="keywords" content="Pastelería tradicional">
+    <meta name="keywords" content="Tortas de fondant de calidad">
     <meta name="description" content="Conoce algunas de nuestras preparaciones y atrévete a hacerlas tú mismo, sin salir de tu hogar">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
