Ajuste de proyecto a la última versión

--- a/index.html
+++ b/index.html
@@ -70,13 +70,11 @@
         <div class="divInferior"></div>
     </header>
     <main class="row">
-        <section class="container">
-            <article class="row col-xl-12">
-                <div id="contenido">
-                    <h1>Nuestra propuesta</h1>
-                    <p>Somos una pyme dedicada a la elaboración y distribución de productos propios de pastelería de la mejor calidad, utilizando productos de primera selección a un precio muy conveniente</p>
-                    <p>Elige una de las opciones del menú para conocernos</p>
-                </div>
+        <section class="col-xl-10 mx-auto">
+            <article id="contenido">
+                <h1>Nuestra propuesta</h1>
+                <p>Somos una pyme dedicada a la elaboración y distribución de productos propios de pastelería de la mejor calidad, utilizando productos de primera selección a un precio muy conveniente</p>
+                <p>Elige una de las opciones del menú para conocernos</p>
             </article>
             <article class="row backgroundTransparent">
                 <div class="article__banner--setFormato">
