--- a/pages/galeriaproductos.html
+++ b/pages/galeriaproductos.html
@@ -68,10 +68,10 @@
         </aside>
         <div class="divInferior"></div>
     </header>
-    <div>
+    <main>
         <h1>Galería de productos</h1>
-        <article>
-            <section class="galeria heighLimit">
+        <section>
+            <article class="galeria heighLimit mb-5">
                 <div class="fullWidth">
                     <h2>Pasteles y tortas</h2>
                 </div>
@@ -140,9 +140,9 @@
                 <img src="../img/galletas/galletas-24.jpg" class="imagenGaleria">
                 <img src="../img/galletas/galletas-25.jpg" class="imagenGaleria">
                 <img src="../img/galletas/galletas-26.jpg" class="imagenGaleria">
-            </section>
-        </article>
-    </div>
+            </article>
+        </section>
+    </main>
     <a href="https://api.whatsapp.com/send?phone=56994535974&app=facebook&entry_point=page_cta"><img class="whatsappIcon" src="../img/whatsapp.png" alt=""></a class="imagenGaleria">
     <footer class="row body__footer--setFormato">
         <em class="footer__leyenda--setFormato">Dirección: Camino la piedra #1345 - Comuna: Temuco - Chile - <a href="pasteleria.amazing.grace@gmail.com" class="footer__emailLink--setFormato">Correo electónico</a></em>
