--- a/pages/hacerpedido.html
+++ b/pages/hacerpedido.html
@@ -70,11 +70,11 @@
         <div class="divInferior"></div>
     </header>
     <main class="row">
-        <section class="container">
-            <article class="row pl-2 pr-2">
+        <section class="col-xl-10 mx-auto mb-5">
+            <article class="px-3">
                 <h1>Formulario de pedidos</h1>
                 <p>Ingresa tus datos en nuestro formulario de contacto y cuéntanos con qué producto(s) podemos brindarte nuestros servicios.</p>
-                <form class="animate__animated animate__zoomIn">
+                <form class="animate__animated animate__zoomIn pb-3">
                     <div class="form-group">
                         <label for="nombre">Nombre completo</label>
                         <input class="form-control col-md-8" type="text" name="nombre" placeholder="Primer nombre">
