--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -106,7 +106,7 @@
             </article>
         </section>
         <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Famazingpasteleria&tabs=timeline&width=340&height=530&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="530"
-            class="p-3 col-sm-6 col-md-6 col-lg-4 col-xl-3" style="border:none;background: rgba(255,255,255,0.6);overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+            class="p-3 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-5" style="margin: 0 auto;border:none;background: rgba(255,255,255,0.6);overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
     </iframe>
     </main>
     <a href="https://api.whatsapp.com/send?phone=56994535974&app=facebook&entry_point=page_cta"><img class="whatsappIcon" src="../img/whatsapp.png" alt=""></a>
