--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -74,7 +74,7 @@
         <h1>Recetas</h1>
     </div>
     <div class="row">
-        <section class="galeria">
+        <section class="galeria mb-5">
             <article class="card section__card--setFormato">
                 <img class="card-img-top" src="../img/recetas/galletas.jpg" alt="">
                 <div class="card-body">
