--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li><a href="./pages/quienessomos.html">Quienes somos</a></li>
         </ul>
         <section class="logoContainer">
-            <img src="./img/logo.png" alt="" id="logo">
+            <img src="./img/logo.png" class="animate__animated animate__bounceIn" alt="" id="logo">
         </section>
         <ul class="menu gridMenu__menuDerecha--definirGrid">
             <li><a href="./pages/galeriaproductos.html">Galería</a></li>
