--- a/pages/galeriaproductos.html
+++ b/pages/galeriaproductos.html
@@ -26,16 +26,63 @@
     <meta name="keywords" content="Tortas de fondant de calidad">
     <meta name="description" content="Revisa nuestras exquisitas y tentativas tortas, pasteles, cupcakes y galletas">
     <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200&family=Exo+2:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Amazing Grace - Galería de productos</title>
 </head>
 
-<body>
-    <header class="gridMenu row">
+<body class="container-fluid">
+    <div class="row mb-3" id="mobileNav">
+        <nav class="navbar navbar-light purple lighten-4 w-100">
+
+            <!-- Navbar brand -->
+            <!-- Collapse button -->
+            <button class="navbar-toggler toggler-example purple text-white bg-marron animate__animated animate__bounceIn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent41" aria-controls="navbarSupportedContent41" aria-expanded="false"
+                aria-label="Toggle navigation"><i class="fas fa-bars fa-1x"></i></span> Menú</button>
+
+            <!-- Collapsible content -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent41">
+
+                <!-- Links -->
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="quienessomos.html">Quienes somos</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="galeriaproductos.html">Galería <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="recetas.html">Recetas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="hacerpedido.html">Hacer pedido</a>
+                    </li>
+                    <li class="nav-item">
+                        <div class="nav-link redesSocialesLinks">
+                            Redes sociales:
+                            <a href="http://www.instagram.com/pasteleria_amazinggrace"><img src="../img/instagram.png"></a>
+                            <a href="http://www.twitter.com/pasteleria_amazinggrace"><img src="../img/twitter.png"></a>
+                            <a href="http://www.facebook.com/amazingpasteleria"><img src="../img/facebook.png"></a>
+                            <a href="http://www.pinterest.com/amazingpasteleria"><img src="../img/pinterest.png"></a>
+                        </div>
+                    </li>
+                </ul>
+                <!-- Links -->
+
+            </div>
+            <!-- Collapsible content -->
+
+        </nav>
+    </div>
+
+    <header class="gridMenu row" id="headerNav">
         <aside class="asideIzq"></aside>
         <ul class="menu gridMenu__menuIzquierda--definirGrid">
             <li><a href="../index.html">Home</a></li>
@@ -66,9 +113,10 @@
             </ul>
             <p>Redes sociales</p>
         </aside>
-        <div class="divInferior"></div>
+        <div class="divInferior">
+        </div>
     </header>
-    <main>
+    <main class="row">
         <h1>Galería de productos</h1>
         <section>
             <article class="galeria heighLimit mb-5">
@@ -145,8 +193,16 @@
     </main>
     <a href="https://api.whatsapp.com/send?phone=56994535974&app=facebook&entry_point=page_cta"><img class="whatsappIcon" src="../img/whatsapp.png" alt=""></a class="imagenGaleria">
     <footer class="row body__footer--setFormato">
-        <em class="footer__leyenda--setFormato">Dirección: Camino la piedra #1345 - Comuna: Temuco - Chile - <a href="pasteleria.amazing.grace@gmail.com" class="footer__emailLink--setFormato">Correo electónico</a></em>
+        <em class="footer__leyenda--setFormato">Dirección: Camino la piedra #1345 - Temuco - Chile - <a href="pasteleria.amazing.grace@gmail.com" class="footer__emailLink--setFormato">Correo electrónico</a></em>
     </footer>
+    <!-- jQuery library -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Font awasome icons/letters -->
+    <script src="https://kit.fontawesome.com/b791e39fca.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
