--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -37,7 +37,53 @@
 </head>
 
 <body class="container-fluid">
-    <header class="gridMenu row">
+    <div class="row mb-3" id="mobileNav">
+        <nav class="navbar navbar-light purple lighten-4 w-100">
+
+            <!-- Navbar brand -->
+            <!-- Collapse button -->
+            <button class="navbar-toggler toggler-example purple text-white bg-marron animate__animated animate__bounceIn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent41" aria-controls="navbarSupportedContent41" aria-expanded="false"
+                aria-label="Toggle navigation"><i class="fas fa-bars fa-1x"></i></span> Menú</button>
+
+            <!-- Collapsible content -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent41">
+
+                <!-- Links -->
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="quienessomos.html">Quienes somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="galeriaproductos.html">Galería</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="recetas.html">Recetas <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="hacerpedido.html">Hacer pedido</a>
+                    </li>
+                    <li class="nav-item">
+                        <div class="nav-link redesSocialesLinks">
+                            Redes sociales:
+                            <a href="http://www.instagram.com/pasteleria_amazinggrace"><img src="../img/instagram.png"></a>
+                            <a href="http://www.twitter.com/pasteleria_amazinggrace"><img src="../img/twitter.png"></a>
+                            <a href="http://www.facebook.com/amazingpasteleria"><img src="../img/facebook.png"></a>
+                            <a href="http://www.pinterest.com/amazingpasteleria"><img src="../img/pinterest.png"></a>
+                        </div>
+                    </li>
+                </ul>
+                <!-- Links -->
+
+            </div>
+            <!-- Collapsible content -->
+
+        </nav>
+    </div>
+
+    <header class="gridMenu row" id="headerNav">
         <aside class="asideIzq"></aside>
         <ul class="menu gridMenu__menuIzquierda--definirGrid">
             <li><a href="../index.html">Home</a></li>
@@ -135,7 +181,7 @@
     </div>
     <a href="https://api.whatsapp.com/send?phone=56994535974&app=facebook&entry_point=page_cta"><img class="whatsappIcon" src="../img/whatsapp.png" alt=""></a>
     <footer class="row body__footer--setFormato">
-        <em class="footer__leyenda--setFormato">Dirección: Camino la piedra #1345 - Comuna: Temuco - Chile - <a href="pasteleria.amazing.grace@gmail.com" class="footer__emailLink--setFormato">Correo electónico</a></em>
+        <em class="footer__leyenda--setFormato">Dirección: Camino la piedra #1345 - Temuco - Chile - <a href="pasteleria.amazing.grace@gmail.com" class="footer__emailLink--setFormato">Correo electrónico</a></em>
     </footer>
     <!-- jQuery library -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
@@ -143,6 +189,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Font awasome icons/letters -->
+    <script src="https://kit.fontawesome.com/b791e39fca.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
