Adición de widget de whatssap

--- a/pages/galeriaproductos.html
+++ b/pages/galeriaproductos.html
@@ -191,10 +191,11 @@
             </article>
         </section>
     </main>
-    <a href="https://api.whatsapp.com/send?phone=56994535974&app=facebook&entry_point=page_cta"><img class="whatsappIcon" src="../img/whatsapp.png" alt=""></a class="imagenGaleria">
+    <div class="elfsight-app-6d4f0d21-7e60-433a-add4-7ebd82029487"></div>
     <footer class="row body__footer--setFormato">
         <em class="footer__leyenda--setFormato">Dirección: Camino la piedra #1345 - Temuco - Chile - <a href="pasteleria.amazing.grace@gmail.com" class="footer__emailLink--setFormato">Correo electrónico</a></em>
     </footer>
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
     <!-- jQuery library -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <!-- Popper JS -->
