--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -156,10 +156,11 @@
             class="p-3 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-5" style="margin: 0 auto;border:none;background: rgba(255,255,255,0.6);overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
     </iframe>
     </main>
-    <a href="https://api.whatsapp.com/send?phone=56994535974&app=facebook&entry_point=page_cta"><img class="whatsappIcon" src="../img/whatsapp.png" alt=""></a>
+    <div class="elfsight-app-6d4f0d21-7e60-433a-add4-7ebd82029487"></div>
     <footer class="row body__footer--setFormato">
         <em class="footer__leyenda--setFormato">Dirección: Camino la piedra #1345 - Temuco - Chile - <a href="pasteleria.amazing.grace@gmail.com" class="footer__emailLink--setFormato">Correo electrónico</a></em>
     </footer>
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
     <!-- jQuery library -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <!-- Popper JS -->
