Adaptación del fondo a modo cover

--- a/pages/404.html
+++ b/pages/404.html
@@ -9,7 +9,7 @@
     <title>Amazing Grace - Error 404</title>
 </head>
 
-<body background="https://coderhousewebsimple.000webhostapp.com/img/background.png" class="container-fluid">
+<body background="https://coderhousewebsimple.000webhostapp.com/img/background.png" style="background-size: cover" class="container-fluid">
     <div class="row h4 text-danger bg-warning">
         <p class="mx-auto h1"><strong>ERROR 404</strong></p>
     </div>
